Crash when using a hotkey for a New file template or Open Recent file. #69910

Closed
opened 2019-09-15 18:51:15 +02:00 by Zino Guerr · 7 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-15 13:43, hash: 8e62fdbcbd

Short description of error
Just assign a hotkey to one of these entries in (New file or Open Recent) and try to use it.

Exact steps for others to reproduce the error
new.png

**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-15 13:43, hash: `8e62fdbcbd` **Short description of error** Just assign a hotkey to one of these entries in (New file or Open Recent) and try to use it. **Exact steps for others to reproduce the error** ![new.png](https://archive.blender.org/developer/F7748750/new.png)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm a crash.

But this only seems to happen if I use the shortcut right after assigning it.
If I do anything else between assigning and using it (e.g. selecting an object), then no crash happens...

Seems like CTX_wm_window(C) returns NULL in that case...

1 WM_window_get_active_workspace wm_window.c       2327 0x339af45 
2 WM_window_get_active_screen    wm_window.c       2364 0x339b0ac 
3 WM_tooltip_timer_clear         wm_tooltip.c      81   0x3395f36 
4 WM_tooltip_clear               wm_tooltip.c      92   0x3395fb6 
5 wm_handlers_do_intern          wm_event_system.c 2724 0x3369093 
6 wm_handlers_do                 wm_event_system.c 2977 0x3369de0 
7 wm_event_do_handlers           wm_event_system.c 3464 0x336b434 
8 WM_main                        wm.c              417  0x335e5cd 
9 main                           creator.c         491  0x2d08cb6 
Can confirm a crash. But this only seems to happen if I use the shortcut right after assigning it. If I do anything else between assigning and using it (e.g. selecting an object), then no crash happens... Seems like CTX_wm_window(C) returns NULL in that case... ``` 1 WM_window_get_active_workspace wm_window.c 2327 0x339af45 2 WM_window_get_active_screen wm_window.c 2364 0x339b0ac 3 WM_tooltip_timer_clear wm_tooltip.c 81 0x3395f36 4 WM_tooltip_clear wm_tooltip.c 92 0x3395fb6 5 wm_handlers_do_intern wm_event_system.c 2724 0x3369093 6 wm_handlers_do wm_event_system.c 2977 0x3369de0 7 wm_event_do_handlers wm_event_system.c 3464 0x336b434 8 WM_main wm.c 417 0x335e5cd 9 main creator.c 491 0x2d08cb6 ```
Member

@Znio.G: will put that on low prio (since it seems very specific to assign the hotkey and doing nothing in between), but feel free to comment again if you've found that it crashes in more scenarios...

@Znio.G: will put that on low prio (since it seems very specific to assign the hotkey and doing nothing in between), but feel free to comment again if you've found that it crashes in more scenarios...

Added subscriber: @pedroreis.ad

Added subscriber: @pedroreis.ad
Pedro Reis self-assigned this 2019-09-19 11:44:41 +02:00

This issue was referenced by eeba31e2ca

This issue was referenced by eeba31e2ca80863da19624721c2fcf020f13db53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69910
No description provided.