Fix T69910: crash when using a hotkey for a new or open recent file

Differential Revision: https://developer.blender.org/D5839